test/data/pass/misc/contextual_reserved_word.js
var let, of, async, static;
for(of of []);
