test/data/fail/declarations/variable.js
let let; //<>
const let = 0; //<>
var a; let a; //<>
let a, a; //<>
let a; let a; //<>
for(let a = 0; false;) let a; //<>
